@@ -31,12 +31,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
     }
 
     /**
-     * Try to authenticate the user with $username and $password.
-     *
-     * @param string $username
-     * @param string $password
-     *
-     * @return bool
+     * {@inheritdoc}
      *
      * @throws \LogicException
      */
@@ -66,7 +61,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
         } catch (Swift_TransportException $e) {
             $agent->executeCommand("RSET\r\n", [250]);
 
-            return false;
+            throw $e;
         }
     }
 
