@@ -36,7 +36,10 @@ class Swift_Transport_Esmtp_Auth_CramMd5AuthenticatorTest extends \SwiftMailerTe
             );
     }
 
-    public function testAuthenticationFailureSendRsetAndReturnFalse()
+    /**
+     * @expectedException Swift_TransportException
+     */
+    public function testAuthenticationFailureSendRset()
     {
         $cram = $this->getAuthenticator();
 
@@ -52,9 +55,7 @@ class Swift_Transport_Esmtp_Auth_CramMd5AuthenticatorTest extends \SwiftMailerTe
              ->once()
              ->with("RSET\r\n", [250]);
 
-        $this->assertFalse($cram->authenticate($this->agent, 'jack', 'pass'),
-            '%s: Authentication fails, so RSET should be sent'
-            );
+        $cram->authenticate($this->agent, 'jack', 'pass');
     }
 
     private function getAuthenticator()
